--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 </head>
 <body>
     <div class="menubar">
-        <div class="logo"></div>
-        <div class="prodname">
-            <h4>FLOWERS</h4>
-        </div>
+        <div class="prodname">Flowerss</div>
         <div class="links">
             <a href="">Home</a>
             <a href="">Gallery</a>
@@ -24,17 +21,14 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <div class="body">
-        <div class="sidelinks">a</div>
-        <div class="content">
-            <h1>Petals</h1>
+    <div class="container">
+        <div class="sidelinks">
             <p>Flowers yezzzzzz dfcbhjrvbhercfbhfbcjsbdcbjhfbc
                 efjcbkjesdfbcjehrfcjverbfcjnbdjfbchjebfcjbewfj
                 fhcbkbsdfcvhjbfcbdfhbc jhd bhdc dsb chwbehkwjx
                 efhcerhvcjnhjenfciuhrevhuerhyjcndejncjehrjfhvue
             </p>
         </div>
-        <div class="side-content">a</div>
     </div>
 </body>
 </html>
