--- a/index.html
+++ b/index.html
@@ -10,25 +10,35 @@
 </head>
 <body>
     <div class="menubar">
-        <div class="prodname">Flowerss</div>
+        <div class="logo"></div>
+        <div class="prodname">
+            <h4>FLOWERS</h4>
+        </div>
         <div class="links">
-            <a href="">Home</a>
-            <a href="">Gallery</a>
-            <a href="">Services</a>
-            <a href="">Owner</a>
+            <a href="https://youtu.be/G7KNmW9a75Y?si=W2LNGIlOdQVopOMx">Home</a>
+            <a href="https://youtu.be/YudHcBIxlYw?si=GhAEyHYfZOhcyv6w">Gallery</a>
+            <a href="https://youtu.be/G7KNmW9a75Y?si=W2LNGIlOdQVopOMx">Services</a>
+            <a href="https://youtu.be/YudHcBIxlYw?si=GhAEyHYfZOhcyv6w">Owner</a>
         </div>
     </div>
-
-    <link rel="stylesheet" href="style.css">
-
     <div class="container">
         <div class="sidelinks">
-            <p>Flowers yezzzzzz dfcbhjrvbhercfbhfbcjsbdcbjhfbc
-                efjcbkjesdfbcjehrfcjverbfcjnbdjfbchjebfcjbewfj
-                fhcbkbsdfcvhjbfcbdfhbc jhd bhdc dsb chwbehkwjx
-                efhcerhvcjnhjenfciuhrevhuerhyjcndejncjehrjfhvue
-            </p>
+            <a href="https://youtu.be/G7KNmW9a75Y?si=W2LNGIlOdQVopOMx">Types</a>
+            <a href="https://youtu.be/YudHcBIxlYw?si=GhAEyHYfZOhcyv6w">History</a>
+            <a href="https://youtu.be/G7KNmW9a75Y?si=W2LNGIlOdQVopOMx">Colors</a>
+            <a href="https://youtu.be/YudHcBIxlYw?si=GhAEyHYfZOhcyv6w">Other Products</a>
+        </div>
+        <div class="centerblock">
+            <br>
+            <h2>Petal-lous Flowers</h2>
+            <img src="centerimg.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu varius nisl, efficitur elementum diam. Sed euismod sollicitudin quam et lobortis. Nullam nec tempus eros. Sed vitae enim at est commodo consequat quis volutpat eros. Phasellus imperdiet lorem eu mauris tincidunt, ac lobortis eros sollicitudin. Quisque quis lorem lectus. Etiam suscipit nulla enim, eu feugiat eros rutrum et.</p>
+        </div>
+        <div class="filler">
+            <img src="fillerimg.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu varius nisl, efficitur elementum diam. Sed euismod sollicitudin quam et lobortis. Nullam nec tempus eros. Sed vitae enim at est commodo consequat quis volutpat eros.</p>
         </div>
     </div>
+    <link rel="stylesheet" href="style.css">
 </body>
 </html>
